Feat: refreshToken, redis setting, Fix: securityconfig, code cleanup